[tool.poetry]
name = "s5"
version = "0.1.0"
description = ""
authors = ["kavorite <kavorite@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
jax = {version = "0.3.*"}
dm-haiku = "^0.0.9"
numpy = "^1.23.4"
scipy = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
